# New_Reportbank

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml  reportbank_repo.db
backend/api/: __init__.py  admin_management.py  auth_context.py  auth_login.py  dashboard.py  db_connections.py  deps_admin.py  itsm_webhook.py  psr_flow.py  runtime_query.py  schemas.py  security_policy.py  test_input.py  workflow_admin.py
backend/casbin/: rbac_policy.csv
backend/core/: __init__.py  casbin_setup.py  config.py  database.py  jwt_tokens.py  passwords.py  target_db_manager.py
backend/reportbank_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/: __init__.py  sql_validator.py  workflow.py
backend/sql/: 000_bootstrap_rpt.sql  001_init_rpt.sql  002_rpt_security_layer.sql  010_seed_demo_psr.sql  012_add_viewable_until.sql  013_add_itsm_request_columns.sql  014_add_mask_policy_table.sql  015_add_admin_auth_tables.sql  016_grant_admin_rbac_to_app.sql  017_add_department_table.sql
backend/src/: __init__.py
backend/src/modules/: __init__.py
backend/src/modules/admin/: __init__.py
backend/src/modules/admin/application/: __init__.py  bootstrap_admin.py
backend/src/modules/admin/domain/: __init__.py  page_catalog.py
backend/src/modules/admin/infrastructure/: __init__.py  orm.py  repository.py
backend/src/modules/dashboard/: __init__.py
backend/src/modules/security/: __init__.py
backend/src/modules/sql_governance/: __init__.py
backend/src/modules/workflow/: __init__.py
frontend/: .env.local.example  package.json  (+3 more)
(+77 files in other folders)
