[project]
name = "reportbank-backend"
version = "0.1.0"
description = "Integrated SQL governance and report platform — API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "oracledb>=2.4.0",
  "asyncpg>=0.30.0",
  "aioodbc>=0.5.0",
  "aiosqlite>=0.20.0",
  "sqlglot>=25.0.0",
  "casbin>=1.36.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "pyjwt>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "services*", "src*"]
